themes/kmkh/static/css/layout.css
@import url('https://fonts.googleapis.com/css?family=Cormorant+Garamond:300,300i,500,500i,700');

html, body {
    font-family: var(--font-family);
    font-weight: 500;
    background-color: rgba(254,254,254,1);
    font-size: var(--font-size-regular);
    line-height: var(--line-height-regular);
}

.text {
    max-width: 1000px;
    margin: auto;
    padding: 25px;
    padding-right: 45px;
}

.text img {
    width: 100%;
    -webkit-box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.4);
    -moz-box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.4);
    box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.4);
}

.text>h1, .text>h2, .text>h3 {
    font-weight: 300;
    padding-bottom: 30px;
}

.text>p {
    padding-bottom: 30px;
}

.text b, .text strong {
    font-weight: 700;
}

.text em {
    font-style: italic;
}

.text>h1 {
    font-size: var(--font-size-large);
    line-height: var(--line-height-large);
    font-style: italic;
}

.text>h2 {
    text-transform: uppercase;
}

.text>h3 {
    font-size: var(--font-size-regular);
    font-weight: 500;
    font-style: italic;
    padding-bottom: 15px;
}

.main .text ul {
    list-style: disc inside;
    margin-bottom: 30px;
}

.main .text ul li {
    display: list-item;
}

.text>ul.musicians {
    list-style-type: none;
    margin: 0;
    padding: 0;
    margin-bottom: 40px;
}

.text a {
    color: black;
    text-decoration: none;
    font-style: italic;
}

.list a {
    text-decoration: none;
}

.list .element:hover {
    transform: scale(1.02);
    transform-origin: top center;
}

.list .title {
    font-size: var(--font-size-medium);
    line-height: var(--line-height-medium);
}

.list .element {
    margin-bottom: 30px;
    transition: transform .2s;
    transform-origin: top center;
}

.almost-booked {
    background-color: black;
    color: white;
    text-align: center;
    margin-bottom: 30px;
    padding: 20px;
}

.almost-booked>p>a {
    color: white
}

.corona {
    font-weight: 700;
    background-color: #CC0000;
    color: white;
    text-align: center;
    margin-bottom: 30px;
    padding: 20px;
}

@media only screen and (min-width: 600px) {
    .text {
        padding: 60px;
        padding-top: 120px;
        padding-right: 75px;
    }

    .nav-toggle-label {
        display: none;
    }

    .menu {
        display: block;
        position: fixed;
        width: 100%;
        height: 80px;
        transition: all .2s;
        background-color: rgba(254,254,254,0.9);
    }

    .menu:hover {
        background-color: black;
        box-shadow: 0px 0px 50px 0px rgba(0,0,0,0.8);
        height: auto;
        color: white;
    }

    nav {
        background-color: transparent;
        padding-left: 60px;
        padding-right: 75px;
        width: auto;
        max-width: 1000px;
        margin: auto;
        height: 80px;
        display: block;
        overflow: visible;
        clear: both;
    }

    .home, .navigation {
        font-size: var(--font-size-regular);
        line-height: var(--line-height-regular);
        height: 80px;
        float: right;
    }

    .submenu .date {
        font-weight: 300;
        font-style: italic;
    }

    .home {
        float: left;
    }

    .navigation ul.mainmenu {
    }

    .navigation ul.mainmenu li {
        float: left;
        margin: 0;
        margin-left: 30px;
        height: 100%;
    }

    nav a {
        color: black;
    }

    .menu:hover nav a {
        color: white;
    }

    .menu:hover .subnavigation {
        width: 100%;
        height: auto;
        clear: both;
        float: right;
        display: block;
        padding-top: 20px;
        padding-bottom: 20px;
    }
}

@media only screen and (min-width: 800px) {
    .home {
        display: flex;
    }
}

